--- a/styles/flake8.toml
+++ b/styles/flake8.toml
@@ -1,12 +1,8 @@
 ["setup.cfg".flake8]
-ignore = "W503"
-exclude = """
-    tests/,
+ignore = """\n    W503"""
+exclude = """\n    tests/,
     */migrations/,
     venv/,
-    env/
-"""
-per-file-ignores = """
-    */settings.py:E501
-"""
+    env/,"""
+per-file-ignores = """\n    */settings.py:E501"""
 max-complexity = 10
