--- a/styles/styleguide.toml
+++ b/styles/styleguide.toml
@@ -2,14 +2,7 @@
 python = "^3.11"
 
 ["pyproject.toml".tool.poetry.group.dev.dependencies]
-autopep8 = "^2.0.2"
-bandit = "^1.7.5"
-flake8 = "^6.0.0"
-flake8-broken-line = "^0.6.0"
-flake8-isort = "^6.0.0"
-flake8-plugin-utils = "^1.3.2"
-flake8-return = "^1.2.0"
-flake8-typing-imports = "^1.14.0"
+black = "^23.3.0"
 mypy = "^1.2.0"
 nitpick = "^0.33.1"
-pylint = "^2.17.2"
+wemake-python-styleguide = "^0.17.0"
